src/test/deca/context/invalid/bad_equals.deca
//ERROR :20
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float nourrir(float poidsNourriture) {
        poids = poids + poidsNourriture;
        return poids;
    }

}
{
    Animal Zebre = new Animal();
    int cheval = 9;

    boolean b = (Zebre.equals(cheval));
}